examples/4dwhatsamanifold/presentation.css
.grid{
    width: 100%;
    height: 100%;
    position:absolute;
}



.headerPart{
    width: 100%;
    /*height: 3%;*/
    /*background-color: red;*/
}

.threeDPart{
    height: 62%;
    width: 100%;
    /*background-color: green;*/
    min-height: 2;
}

.non3DFooterPart{
    height: 35%;
    width: 100%;
    overflow-y: scroll;
    padding: 0.5em;
    border-top: 1px solid #ccc;
    line-height: 1.0;
}

#chartCanvases{
    display: grid;
    grid-template-columns: repeat(auto-fill, 150px);
    grid-template-rows: repeat(auto-fill, 150px);
    grid-gap: 0.5rem;
}
.chart{

}

/* used in 1 coordinate systems */

#coords{
    padding: 5;
    color: black;
    font-size: 5em;
    font-family: "Computer Modern Serif";
    transition: opacity 0.75s linear;
}
#coords:nth-child(2n+1){
    min-width: 30%;
}

#twoDcanvasOverlay{
    z-index: 2;
    margin-top: -100%; /* hack to position 2D canvas over 3D canvas*/
    pointer-events: none;
    opacity: 1.0;
    taransition: 1s linear opacity;
}   

/* used in 2 directsum*/
.factors canvas{
    width: 8em;
    height: 8em;
}
.factors .column{
    padding-bottom: 0;
    padding-top: 0;
}

#timesSign{
    display: block;
    flex-basis: 0;
    flex-grow: 1;
    flex-shrink: 1;
    padding: 0.75rem;

    text-align: center;
    font-size: 150px;
}

/* used in 3 circle */
.factors{
  margin: 0 5% 0;
}

.chart{
    margin: auto;
    height: 100%;
}

/* fancy animation? heck yeah */
@keyframes appear {
    from {
      transform: scale(0);
    }
    to {
      transform: scale(1);
    }
  }
.chart:not(:first-child){
    animation: appear 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000); /* ease-out-exponential */
}

@media (prefers-reduced-motion: reduce) {
  .chart {
    animation: none;
  }
}

.chartCanvasContainer canvas{
    height:100%;
}

.canvasGrid{
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 100%;
    transition: 1.5s grid-template-columns ease-in-out;
}

.griddedCanvas{
    width: 100%;
    height: 100%;
}

#questionMark{
    display: block;
    flex-basis: 0;
    flex-grow: 0.25;
    flex-shrink: 1;
    padding: 0.75rem;

    text-align: center;
    font-size: 150px;
}

.fullscreenText{
    background-color: rgba(255,255,255,0.8);
    pointer-events: none;
    font-size: 5em;
    font-family: "Computer Modern Serif";
    margin: 0;
    padding: 1em;
    width:100%;
}


/* used in 4 coordinate charts */
 .chart canvas{
    width: 150px;
    height: 150px;
}


@media screen and (max-height:600px){
    .threeDPart{
        width: 60%;
        height:100%;
        float:left;
        overflow-y: hidden; /* I'm not sure about this. disabling it does get rid of a scrollbar, but that scrollbar shouldn't be there in the first place.*/
    }

    .non3DFooterPart{
        width: calc(40% - 0.25em);
        height: 100%;
        float:right;
        bottom:0%;
        border-top: none;
        border-left: 1px solid #ccc;
    }

    /* used in 2*/
    .factors canvas{
        width: 6em;
        height: 6em;
    }

    #timesSign{
        font-size: 3em;
        padding: 0;
        margin-top: 1.5em;
    }

    /* used in 3 */

    .chartCanvasContainer canvas{
        height:100%;
        max-height: 10em;
    }

    .fullscreenText{
        font-size: 3em;
    }
   
    /* used in 4*/
    #chartCanvases{
        grid-template-columns: repeat(auto-fill, 100px);
        grid-template-rows: repeat(auto-fill, 100px);
        padding-left: 0;
        padding-right: 0;
    }

     .chart canvas{
        width: 100px;
        height: 100px;
    }
    
}



#canvasContainer canvas{
    width: 100%;
    height: 100%;
}

